# wasmicon

./: Cargo.toml  build.sh
crates/compiler/: Cargo.toml
crates/compiler/src/: lib.rs
crates/compiler/src/llvm/: mod.rs
crates/compiler/src/xtensa_esp32/: asm.rs  mod.rs
crates/wasm_parser/: Cargo.toml
crates/wasm_parser/src/: lib.rs
crates/wasm_parser/src/decoder/: decoder.rs  mod.rs  result.rs
crates/wasm_parser/src/decoder/binary/: mod.rs  module.rs  types.rs
crates/wasm_parser/src/decoder/binary/instructions/: block.rs  instructions.rs  mod.rs
crates/wasm_parser/src/decoder/binary/section/: code.rs  id.rs  mod.rs
crates/wasm_parser/src/parser/: mod.rs  parser.rs
crates/wasm_parser/src/parser/module/: module.rs
examples/: add_two.wasm  add_two.wat  fib.wasm  fib.wat  led.wasm  led.wat  led2.wasm  led2.wat  reg.wasm  reg.wat  sandbox.wasm  sandbox.wat
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decode.rs
src/: main.rs
